[metadata]
name = text-tools
version = 0.1
description = Various tools for dealing with textual corpora.
long_description = file README.md
author = Dirk Roorda
author_email = dirk.roorda@di.huc.knaw.nl
url = https://github.com/annotation/text-tools

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Text Processing :: Markup
keywords =
    text
    database
    graph

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.11.0

packages = 
    tt

[options.entry_points]
console_scripts =
    nbconvert = tt.nbconvert:main
    xmlschema = tt.xmlschema:main
